@@ -71,4 +71,25 @@ class TestTime < Test::Unit::TestCase
       assert_equal(Time.at(0x7fffffff), Time.at(-0x80000000) - (-0xffffffff))
     end
   end
+
+  def test_at
+    assert_equal(100000, Time.at(0.1).usec)
+    assert_equal(10000, Time.at(0.01).usec)
+    assert_equal(1000, Time.at(0.001).usec)
+    assert_equal(100, Time.at(0.0001).usec)
+    assert_equal(10, Time.at(0.00001).usec)
+    assert_equal(1, Time.at(0.000001).usec)
+    assert_equal(0, Time.at(1e-7).usec)
+    assert_equal(0, Time.at(4e-7).usec)
+    assert_equal(1, Time.at(6e-7).usec)
+    assert_equal(1, Time.at(14e-7).usec)
+    assert_equal(2, Time.at(16e-7).usec)
+    if negative_time_t?
+      assert_equal(0, Time.at(-1e-7).usec)
+      assert_equal(0, Time.at(-4e-7).usec)
+      assert_equal(999999, Time.at(-6e-7).usec)
+      assert_equal(999999, Time.at(-14e-7).usec)
+      assert_equal(999998, Time.at(-16e-7).usec)
+    end
+  end
 end
